# TaskFlow

./: .env  .env.example  .gitignore  DEPLOYMENT.md  README.md  TEST-COVERAGE-REPORT.md  docker-compose.yml  railway.toml
.github/workflows/: ci.yml  deploy.yml  e2e-tests.yml  test.yml
backend/: .coverage  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.integration-tests.md  README.md  main.py  pyproject.toml  pytest.ini  railway.json  requirements.txt  setup.cfg  start.sh
backend/api/: main.py
backend/api/routers/: expenses.py  health.py  tasks.py
backend/config/: env_settings.py  settings.py  urls.py
backend/tasks/: admin.py  models.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_task_sort_order.py
backend/tests/: conftest.py  test_integration.py  test_tasks_api.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.e2e-tests.md  README.testing.md  jest.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  vite.config.js
frontend/e2e/: task-management.spec.ts
frontend/src/: middleware.ts
frontend/src/app/tasks/: page.tsx
frontend/src/components/: CreateTaskForm.tsx  DeleteTaskModal.tsx  FormModal.tsx  Header.tsx  TaskCard.tsx  TaskFormModal.tsx
frontend/src/constants/: priorities.ts
frontend/src/hooks/: useTasks.ts
frontend/src/lib/: api.ts  test-utils.tsx
frontend/src/types/: task.ts
frontend/test-results/: .last-run.json
frontend/test-results/task-management-Task-Manag-398fa-andle-concurrent-operations-chromium/: error-context.md
(+8 files in other folders)
