[project]
name = "backend"
version = "0.1.0"
description = "Backend for expense-splitter-app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "fastapi>=0.116.1",
    "psycopg>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.3",
    "uvicorn>=0.35.0",
]
